# docucrypt

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  docker-compose.yml  package-lock.json  scratch.txt
.github/workflows/: main.yml
client-requests/: Cargo.toml
client-requests/src/: lib.rs
client-test/: Cargo.toml  Dockerfile.client
client-test/src/: main.rs
docucrypt-frontend/: package-lock.json  package.json
docucrypt-frontend/src/: App.jsx
docucrypt-frontend/src-tauri/: Cargo.toml  tauri.conf.json
docucrypt-frontend/src-tauri/icons/: icon.icns
docucrypt-frontend/src-tauri/src/: main.rs
docucrypt-frontend/src/assets/styles/: App.css
docucrypt-frontend/src/components/: AccountDetails.jsx  ChatInterface.jsx  DocumentUpload.jsx  SigninSignup.jsx
docucrypt-frontend/src/contexts/: AuthContext.jsx
docucrypt-frontend/src/services/: apiService.js
encipher-server/: Cargo.toml  Dockerfile.axum  entrypoint.sh
encipher-server/docugraph/: Cargo.toml
encipher-server/docugraph/src/: lib.rs  static.initial_prompt.txt
encipher-server/src/: docugraph.rs  main.rs
file-crypt/: Cargo.toml
frontend-client/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend-client/src/: App.css  App.tsx  input.css
frontend-client/src-tauri/: Cargo.toml  tauri.conf.json
frontend-client/src-tauri/src/: lib.rs  main.rs
nginx/: Dockerfile.nginx  nginx.conf  wait-for-certs.sh
ollama/: Dockerfile.ollama  entrypoint.sh
postgres/: static.init.sql
