[package]
name = "encipher-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# docugraph = { path = "./docugraph" }
axum = { version = "0.8.1", features = ["macros"] }
hyper = "1.6.0"
ollama-rs = "0.2.5"
rustls = "0.23.22"  # Ensure default features are enabled.
rustls-pemfile = "2.2.0"
serde = "1.0.217"
tokio = { version = "1.43.0", features = ["full"] }
tokio-rustls = "0.26.1"
tokio-stream = { version = "0.1.17", features = ["net"] }
tower-http = { version = "0.6.2", features = ["cors"] }
futures-util = "0.3"  # For StreamExt
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
argon2 = "0.5.3"
chrono = "0.4.39"
jsonwebtoken = "9.3.1"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio"] }
rand = "0.9.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
axum-login = "0.17.0"
tower-sessions = "0.14.0"
axum-extra = { version = "0.10.0", features = ["typed-header"] }
async-trait = "0.1.86"
