[package]
name = "encipher-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
hyper = "1.6.0"
ollama-rs = "0.2.5"
serde = "1.0.217"
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
futures-util = "0.3"  # For StreamExt
argon2 = "0.5.3"
chrono = "0.4.39"
jsonwebtoken = "9.3.1"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio"] }
rand = "0.9.0"
axum-extra = { version = "0.10.0", features = ["typed-header"] }
anyhow = "1.0.96"
serde_json = "1.0.139"
uuid = "1.14.0"
rust-bert = { version = "0.23.0" }
indradb-lib = { version = "4.0.0", features = ["rocksdb-datastore"] }
ndarray = "0.16.1"
