[package]
name = "docugraph"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.96"
indradb-lib = { version = "4.0.0", features = ["rocksdb-datastore"] }
ndarray = "0.16.1"
ollama-rs = "0.2.5"
rayon = "1.10.0"
rust-bert = { version = "0.23.0", features = ["download-libtorch"] }
serde_json = "1.0.139"
uuid = "1.14.0"
